--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="header">
             <a href="./"> <img src="/img/bikcraft.svg" alt="logo_bikcraft"> </a>
             <nav aria-label="primaria">
-                <ul class="header_menu cor-0">
+                <ul class="header_menu font-1-m cor-0">
                     <li> <a href="/bicicletas.html">Bicicletas</a> </li> 
                     <li> <a href="/seguros.html">Seguros</a> </li> 
                     <li> <a href="/contato.html">Contato</a> </li> 
@@ -25,8 +25,8 @@
     <main class="introducao_bg cor-12">
         <div class="introducao">
             <div class="introducao_conteudo">
-                <h1 class="cor-0">Bicicletas feitas sob medida<span class="cor-p1">.</span></h1>
-                <p>Bicicletas elétricas de alta precisão e qualidade, 
+                <h1 class="font-1-xxl cor-0">Bicicletas feitas sob medida<span class="cor-p1">.</span></h1>
+                <p class="font-2-l cor-5">Bicicletas elétricas de alta precisão e qualidade, 
                 feitas sob medida para você. Explore o mundo na sua velocidade com a Bikcraft.</p>
                 <a href="/bicicletas.html">Escolha a sua</a>
             </div>
