--- a/index.html
+++ b/index.html
@@ -6,17 +6,17 @@
     <title>Bikcraft - Bicicletas  Elétricas</title>
     <meta name="description" content="Bicicletas elétricas de alta precisão e qualidade, feitas sob medida para o cliente. Explore o mundo na sua 
     velocidade com a Bikcraft.">
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
     <header class="header_bg cor-12">
         <div class="header">
-            <a href="./"> <img src="/img/bikcraft.svg" alt="logo_bikcraft"> </a>
+            <a href="./"> <img src="./img/bikcraft.svg" alt="logo_bikcraft"> </a>
             <nav aria-label="primaria">
                 <ul class="header_menu font-1-m cor-0">
-                    <li> <a href="/bicicletas.html">Bicicletas</a> </li> 
-                    <li> <a href="/seguros.html">Seguros</a> </li> 
-                    <li> <a href="/contato.html">Contato</a> </li> 
+                    <li> <a href="./bicicletas.html">Bicicletas</a> </li> 
+                    <li> <a href="./seguros.html">Seguros</a> </li> 
+                    <li> <a href="./contato.html">Contato</a> </li> 
                 </ul>
             </nav>              
         </div>
@@ -28,13 +28,16 @@
                 <h1 class="font-1-xxl cor-0">Bicicletas feitas sob medida<span class="cor-p1">.</span></h1>
                 <p class="font-2-l cor-5">Bicicletas elétricas de alta precisão e qualidade, 
                 feitas sob medida para você. Explore o mundo na sua velocidade com a Bikcraft.</p>
-                <a href="/bicicletas.html">Escolha a sua</a>
+                <a href="./bicicletas.html">Escolha a sua</a>
             </div>
             <div>    
-                <img src="/img/fotos/introducao.jpg" alt="bicicleta elétrica preta">
+                <img src="./img/fotos/introducao.jpg" alt="bicicleta elétrica preta">
             </div>
         </div>
     </main>
+    <article>
+        
+    </article>
 
 </body>
 </html>
